# sora-runtime

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: are-dynamic-scenarios.md  cross-workspace-tool-sharing.md  phase-2-findings.md  phase-3-test-triage.md  reasoning-strategy-extension.md  restore-drift-reconciliation.md
docs/adrs/: 0001-python-asyncio-runtime.md  0002-activity-as-sole-first-class-construct.md  0003-adapters-not-tool-authoring.md  0004-tool-usage-interface.md  0005-workspace-grouping.md  0006-workspace-join-leave-lifecycle.md  0007-manual-record-separation.md  0008-protocol-based-extensibility.md  0009-five-phase-decision-cycle.md  0010-pluggable-phase-strategies.md  0011-phase-fusion-via-threaded-result.md  0012-percepts-vs-messages.md  0013-shared-instances-narrow-dependencies.md  0014-tool-identity-globally-unique.md  0015-manuals-protocol-agnostic-adapter-boundary.md  0016-pluggable-activity-selection.md  0017-parameter-grounding-in-reason.md  0018-manual-merge-policy-and-authored-interface.md  0019-blocked-state-machinery-and-percept-storage.md  README.md  template.md
examples/: __init__.py
examples/are_scenario/: NOTES.md  __init__.py  agent.yaml  run.py  scenario.py  strategies.py
examples/gaia2/: __init__.py
examples/gaia2/email_calendar/: __init__.py  agent.yaml  are_server.py  run.py  strategy.py  task.txt
examples/gaia2/email_calendar/manuals/: calendar.md  email-client.md
scripts/: check_manuals_sync.py  check_readme_sync.py
src/sora/: __init__.py  action.py  activity.py  bootstrap.py  cli.py  cycle.py  environment.py  llm.py  manual.py  memory.py  perception.py  scaffold.py  strategies.py  transport.py  types.py
src/sora/adapters/: __init__.py  anthropic_llm.py  are_mcp.py  are_sim.py  mcp.py
tests/: fakes.py  test_action.py  test_agent_run.py  test_are_dynamic_reproduction.py  test_are_dynamic_strategies.py  test_are_scenario_reproduction.py  test_are_sim.py  test_are_sim_integration.py  test_are_walking_skeleton.py  test_blocked.py  test_bootstrap.py  test_build_agent.py  test_cli.py  test_cycle.py  test_cycle_wiring.py  test_environment.py  test_episodic_memory.py  test_fakes.py  test_gaia2_reproduction.py  test_grounding.py  test_llm_meter.py  test_manual.py  test_mcp_adapter.py  test_memory_backend.py  test_perception.py  test_procedural_memory.py  test_reason.py  test_reason_integration.py  test_scaffold.py  test_semantic_memory.py  test_situate.py  test_smoke.py
tests/fixtures/manuals/: blinds.md  clock.md  robotic-arm.md  video-stream.md  water-pump.md
tests/fixtures/manuals/inherited/: cafeteria-menu.md  cooling-tower.md  employee-handbook.md  reactor-core.md  shared-counter.md  water-pump.md
tests/fixtures/manuals/invalid/: missing-metadata.md
