[project]
name = "sora-runtime"
version = "0.1.0"
description = "S-ORA: a runtime for practical agents in dynamic and asynchronous environments"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "S-ORA Contributors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
mcp = []
a2a = []
wot = []
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[project.scripts]
sora = "sora.cli:main"

[project.urls]
Homepage = "https://github.com/sora-agents/sora-runtime"
Documentation = "https://github.com/sora-agents/sora-runtime/blob/main/README.md"
"Architecture Decisions" = "https://github.com/sora-agents/sora-runtime/tree/main/docs/adrs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sora"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/sora", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
